# LiteWallPaper

./: CMakeLists.txt  LICENSE  README.md  test_output.lwp  test_raw.h264
common/: CMakeLists.txt  bitstream_format.h
wallpaper_maker/: CMakeLists.txt  ffmpeg_runner.cpp  ffmpeg_runner.h  h264_processor.cpp  h264_processor.h  maker_main.cpp  sps_parser.cpp  sps_parser.h
wallpaper_player/: CMakeLists.txt  RCa11344  app.cpp  app.h  app.manifest  config_manager.cpp  config_manager.h  d3d11_decoder.cpp  d3d11_decoder.h  d3d11_renderer.cpp  d3d11_renderer.h  foreground_monitor.cpp  foreground_monitor.h  nal_parser.cpp  nal_parser.h  player_main.cpp  resource.rc  tray_icon.cpp  tray_icon.h  wallpaper_window.cpp  wallpaper_window.h
